tests/invalid/missing_init_pred.m
%-----------------------------------------------------------------------------%
% missing_init_pred.m
% Ralph Becket <rafe@cs.mu.oz.au>
% Wed Mar  9 12:24:52 EST 2005
% vim: ft=mercury ts=4 sw=4 et wm=0 tw=0
%
%-----------------------------------------------------------------------------%

:- module missing_init_pred.

:- interface.

:- solver type t.

%-----------------------------------------------------------------------------%
%-----------------------------------------------------------------------------%

:- implementation.

:- solver type t
    where   representation is int,
            initialisation is init,
            ground is ground,
            any is ground.

%-----------------------------------------------------------------------------%
%-----------------------------------------------------------------------------%
