tests/invalid/missing_init_pred.err_exp
missing_init_pred.m:020: In clause for initialisation predicate for type missing_init_pred.t:
missing_init_pred.m:020:   error: undefined predicate `missing_init_pred.init/1'.
